# Multitenancy-FastAPI

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 2c6e7d073965_create_tables.py  39f5b29a59f0_create_tables.py  4ef7c66149c8_create_tables.py  6e871d4c2043_create_tables.py  f49ca173dcc2_create_tables.py
src/: config.py  main.py
src/api/authentication/: auth_controller.py  auth_service.py
src/api/public/: public_controller.py  public_service.py
src/api/tenant/: tenant_controller.py  tenant_service.py
src/db/: db.py
src/helpers/: bearer.py  hashing.py  migrations.py  token.py
src/models/: models.py
src/schemas/: auth_schema.py  public_schema.py  tenant_schema.py
